# SigFeatX

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  PHASE1_README.md  PHASE2_README.md  README.md  aggregator.py  fix_structure.py  pyproject.toml  requirements.txt  setup.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
SigFeatX/: __init__.py  _progress.py  _validation.py  aggregator.py  decomposition_validator.py  feature_consistency.py  io.py  io_extensions.py  pipeline.py  preprocess.py  sklearn_wrapper.py  utils.py
SigFeatX/decompose/: __init__.py  ceemdan.py  efd.py  emd.py  fouriertransform.py  hht.py  jmd.py  lmd.py  modwt.py  shorttimefouriertransform.py  sst.py  svmd.py  vmd.py  wavelet.py
SigFeatX/features/: __init__.py  advanced_entropy.py  features.py  mfdfa.py  rqa.py
benchmarks/: benchmark_feature_extraction.py
decompose/: __init__.py  efd.py  svmd.py  vmd.py  wavelet.py
docs/: api.md  conf.py  glossary.md  index.md  quickstart.md
examples/: example_advanced.py  example_basic.py  example_batch_processing.py  example_eeg.py  phase1_usage.py  phase2_usage.py  playground.ipynb  upgrade_usage.py
features/: __init__.py  features.py
tests/: test_aggregator_extensions.py  test_bug_fixes.py  test_crossval_entropy.py  test_crossval_pyemd.py  test_decomp_visualisation.py  test_decompose.py  test_decomposition_behavior.py  test_decomposition_edge_cases.py  test_features.py  test_io.py  test_lmd_jmd.py  test_noise_correctness.py  test_phase1.py  test_phase2.py  test_preprocess.py  test_properties.py  test_robustness.py  test_sigfeatx.py  test_sine_correctness.py
