[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "SigFeatX"
version = "0.1.0"
description = "A comprehensive signal feature extraction library"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Diptiman Mohanta", email = "diptimanmohanta7@gmail.com"}
]
keywords = ["signal processing", "feature extraction", "decomposition", "time series"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Signal Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "PyWavelets>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
]
examples = [
    "pandas>=1.3.0",
    "matplotlib>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/diptiman-mohanta/SigFeatX"
Documentation = "https://github.com/diptiman-mohanta/SigFeatX/blob/main/README.md"
Repository = "https://github.com/diptiman-mohanta/SigFeatX.git"
"Bug Tracker" = "https://github.com/diptiman-mohanta/SigFeatX/issues"
