[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SigFeatX"
version = "0.3.0"
description = "Comprehensive signal feature extraction with decomposition, batch processing, and sklearn integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Diptiman Mohanta", email = "diptimanmohanta7@gmail.com"}
]
maintainers = [
    {name = "Diptiman Mohanta", email = "diptimanmohanta7@gmail.com"}
]
keywords = [
    "signal processing",
    "feature extraction",
    "decomposition",
    "time series",
    "EMD",
    "CEEMDAN",
    "VMD",
    "MODWT",
    "wavelet",
    "Hilbert-Huang",
    "synchrosqueezing",
    "recurrence quantification",
    "multifractal",
    "entropy",
    "EEG",
    "ECG",
    "biomedical",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "PyWavelets>=1.4.0",
    "pandas>=1.5.3",
]

[project.optional-dependencies]
sklearn = [
    "scikit-learn>=1.3",
]
progress = [
    "tqdm>=4.60",
]
parquet = [
    "pyarrow>=10.0",
]
hdf5 = [
    "tables>=3.7",
    "h5py>=3.0",
]
viz = [
    "matplotlib>=3.5",
    "seaborn>=0.12",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.100",
    "ruff>=0.8.0",
    "mypy>=1.10",
    "build>=1.0",
    "twine>=4.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scikit-learn>=1.3",
    "tqdm>=4.60",
    "pyarrow>=10.0",
    "tables>=3.7",
    "h5py>=3.0",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/diptiman-mohanta/SigFeatX"
Documentation = "https://github.com/diptiman-mohanta/SigFeatX/blob/main/README.md"
Repository = "https://github.com/diptiman-mohanta/SigFeatX.git"
Issues = "https://github.com/diptiman-mohanta/SigFeatX/issues"
Changelog = "https://github.com/diptiman-mohanta/SigFeatX/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["SigFeatX*"]
exclude = ["tests*", "examples*", "benchmarks*"]

[tool.setuptools.package-data]
SigFeatX = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error::DeprecationWarning:SigFeatX",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N", "UP", "RUF"]
ignore = [
    "E501",  # line-length handled by formatter
    "N803",  # capital-letter args (K, N) are math convention
    "N806",  # capital locals (K, N) ditto
    "N999",  # package is named SigFeatX on PyPI; renaming would break imports
    "RUF001",  # typographic -/x/. used deliberately in docs/comments/test output
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402", "F401", "F541", "I001"]  # demo scripts: linear top-to-bottom narration

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
# numpy's stubs return `Any` from many reductions/creation functions and
# distinguish fixed-ndim array shapes in ways real code doesn't track;
# enforcing these here would mean scattering casts through numeric code
# for no behavioural benefit.
disable_error_code = ["no-any-return"]